--- a/css/style.css
+++ b/css/style.css
@@ -284,3 +284,13 @@ body {
     transition: all 300ms;
 }
 /* End Player */
+
+#equalizer-modal .modal-dialog {
+  height: 80%;
+  width: 80%;
+}
+
+#equalizer {
+  height: 100%;
+  width: 100%
+}
