--- a/css/style.css
+++ b/css/style.css
@@ -1,296 +1,1 @@
-@font-face {
-  font-family: Roboto;
-  src: url('fonts/Roboto-Regular.ttf');
-}
-/* Body page*/
-body {
-    overflow: hidden;
-}
-
-.no-margin {
-  margin: 0px !important;
-  padding: 0px !important;
-}
-
-.ion-home:before,
-.ion-ios-pulse-strong:before,
-.ion-headphone:before,
-.ion-disc:before {
-  margin-right: 12px;
-}
-/* End Body page*/
-
-/* Top */
-.headBar {
-  height: 86px;
-  background-color: #222428;
-}
-.logo {
-  z-index: 1;
-  font-size: 2.5em;
-  color: #c0392b;
-  padding: 0.5em;
-  font-family: 'Roboto', sans-serif;
-
-  -webkit-box-shadow: 0 2px 4px 0 rgb(0, 0, 0);
-  -moz-box-shadow: 0 2px 4px 0 rgb(0, 0, 0);
-  box-shadow: 0 2px 4px 0 rgb(0, 0, 0);
-  -o-box-shadow: 0 2px 4px 0 rgb(0, 0, 0);
-  -ms-box-shadow: 0 2px 4px 0 rgb(0, 0, 0);
-}
-
-.logo .ion-android-search,
-.search {
-  font-size: 0.5em;
-  float: right;
-  background-color: #36383d;
-  border: 0px;
-  padding: 0.5em;
-}
-
-.search:focus {
-  border: 0px;
-  outline: none;
-}
-
-.smallMenu {
-  display: none;
-  float: right;
-  margin: 0em 1em;
-}
-
-.smallMenu:hover {
-  cursor: pointer;
-}
-/* End top */
-
-/* container-living */
-.container-living {
-  height: 90vh;
-  background-color: #383838;
-  color: #fff;
-  font-family: 'Roboto', sans-serif;
-}
-/* End container-living */
-
-/* control */
-.control {
-  height: 90vh;
-  background-color: #222428;
-  font-size: 17px;
-  padding-top: 2em !important;
-  border-left: 2px solid transparent;
-}
-
-.controlActive,
-.control span:hover {
-  cursor: pointer;
-  color: #c0392b;
-  border-left: 2px solid #c0392b;
-  padding-left: 2em;
-}
-.control span:hover label {
-  cursor: pointer;
-}
-.control span {
-  display: block;
-  padding: 0.5em 1em;
-
-  -webkit-transition: all 200ms;
-  -moz-transition: all 200ms;
-  -ms-transition: all 200ms;
-  -o-transition: all 200ms;
-  transition: all 200ms;
-}
-
-.control-mobile {
-    display: none;
-}
-
-.control-mobile span {
-    display: block;
-    padding: 1em;
-    background-color: #222428;
-    border-left: 4px solid transparent;
-
-    -webkit-box-shadow: 0 2px 4px 0 rgb(0, 0, 0);
-    -moz-box-shadow: 0 2px 4px 0 rgb(0, 0, 0);
-    box-shadow: 0 2px 4px 0 rgb(0, 0, 0);
-    -o-box-shadow: 0 2px 4px 0 rgb(0, 0, 0);
-    -ms-box-shadow: 0 2px 4px 0 rgb(0, 0, 0);
-
-    -webkit-transition: all 200ms;
-    -moz-transition: all 200ms;
-    -ms-transition: all 200ms;
-    -o-transition: all 200ms;
-    transition: all 200ms;
-}
-
-.control-mobile span:hover {
-    border-left: 4px solid #c0392b;
-    padding-left: 2em;
-    color: #c0392b;
-    cursor: pointer;
-}
-/* End control */
-
-/* main */
-.main {
-    background-color: #c0392a;
-    height: 90vh;
-    overflow-y: auto;
-    padding-bottom: 10em;
-}
-
-.main h1 {
-    text-align: center;
-    font-size: 5em;
-}
-.text-shadow{
-    text-shadow:  1px 1px rgba(108, 32, 24, 0.5) , 2px 2px rgba(117, 35, 26, 0.52) , 3px 3px rgba(125, 37, 28, 0.54) , 4px 4px rgba(132, 39, 29, 0.56) , 5px 5px rgba(139, 41, 31, 0.58) , 6px 6px rgba(144, 43, 32, 0.6) , 7px 7px rgba(149, 44, 33, 0.62) , 8px 8px rgba(153, 45, 34, 0.64) , 9px 9px rgba(157, 47, 35, 0.66) , 10px 10px rgba(161, 48, 35, 0.68) , 11px 11px rgba(164, 49, 36, 0.7) , 12px 12px rgba(167, 50, 37, 0.72) , 13px 13px rgba(170, 50, 37, 0.74) , 14px 14px rgba(172, 51, 38, 0.76) , 15px 15px rgba(175, 52, 38, 0.78) , 16px 16px rgba(177, 52, 39, 0.8) , 17px 17px rgba(179, 53, 39, 0.82) , 18px 18px rgba(181, 54, 40, 0.84) , 19px 19px rgba(182, 54, 40, 0.86) , 20px 20px rgba(184, 55, 40, 0.88) , 21px 21px rgba(186, 55, 41, 0.9) , 22px 22px rgba(187, 56, 41, 0.92) , 23px 23px rgba(188, 56, 41, 0.94) , 24px 24px rgba(190, 56, 41, 0.96) , 25px 25px rgba(191, 57, 42, 0.98);
-}
-
-.struc {
-    margin-top: 5em;
-    text-align: center;
-}
-
-.struc span {
-    font-size: 100px;
-}
-
-.struc label {
-    text-align: right;
-}
-
-/* End main */
-/* discover */
-.discover {
-    background-color: #c0392a;
-    height: 90vh;
-}
-
-.discover h1 {
-    text-align: center;
-    font-size: 100px;
-}
-/* End discover */
-/* View */
-.myMusic {
-    display: none;
-}
-
-.discover {
-    display: none;
-}
-/* End view */
-/* Player */
-.wrapPlayer {
-    position: fixed;
-    width: 100%;
-    height: 60px;
-    background-color: #36383d;
-    bottom: 0px;
-    /*border-top: 2px solid #5a5a5a;*/
-    color: #b5b5b5;
-}
-
-.wrapPlayer span{
-    display: inline-block;
-    padding-left: 20px;
-}
-
-.wrapPlayer h2 {
-    display: inline-block;
-    padding-left: 10px;
-    font-size: 18px;
-}
-
-.wrapPlayer audio {
-    float: right;
-    margin: 1em;
-}
-
-#songs {
-    padding: 1em;
-    /*background-color: red;*/
-}
-
-#songs li {
-    list-style: none;
-    padding: 2em;
-    background-color: #c0392b;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .05), 0 1px 4px 0 rgba(0, 0, 0, .08),
-              0 3px 1px -2px rgba(0, 0, 0, .2);
-
-    -webkit-transition: all 200ms;
-    -moz-transition: all 200ms;
-    -ms-transition: all 200ms;
-    -o-transition: all 200ms;
-    transition: all 200ms;
-}
-
-#songs li:hover,
-.musicPlayed {
-    background-color: #ff5b4a !important;
-    cursor: pointer;
-}
-
-#songs li span:hover,
-#songs li label:hover {
-    cursor: pointer;
-}
-
-#songs li span {
-    padding-right: 10px;
-}
-
-#container-bar {
-    position: absolute;
-    width: 100%;
-    height: 5px;
-    background-color: #FF7361;
-    padding: 0px;
-}
-
-#bar {
-    position: absolute;
-    height: 5px;
-    background-color: #fff;
-    width: 0px;
-    padding: 0px;
-
-    -webkit-transition: all 300ms;
-    -moz-transition: all 300ms;
-    -ms-transition: all 300ms;
-    -o-transition: all 300ms;
-    transition: all 300ms;
-
-    background: linear-gradient(to bottom, red, orange, yellow, green, blue, indigo, violet);
-}
-
-#cursor{
-    position: absolute;
-    height: 13px;
-    width: 2px;
-    left: 0%;
-    bottom: -10px;
-    background-color: #fff;
-
-    -webkit-transition: all 300ms;
-    -moz-transition: all 300ms;
-    -ms-transition: all 300ms;
-    -o-transition: all 300ms;
-    transition: all 300ms;
-}
-/* End Player */
-
-#equalizer-modal .modal-dialog {
-  height: 80%;
-  width: 80%;
-}
-
-#equalizer {
-  height: 100%;
-  width: 100%
-}
+@font-face{font-family:Roboto;src:url('fonts/Roboto-Regular.ttf')}body{overflow:hidden}.no-margin{margin:0 !important;padding:0 !important}.ion-home:before,.ion-ios-pulse-strong:before,.ion-headphone:before,.ion-disc:before{margin-right:12px}.headBar{background-color:#222428;height:86px}.logo{-moz-box-shadow:0 2px 4px 0 #000000;-ms-box-shadow:0 2px 4px 0 #000000;-o-box-shadow:0 2px 4px 0 #000000;-webkit-box-shadow:0 2px 4px 0 #000000;box-shadow:0 2px 4px 0 #000000;color:#c0392b;font-family:'Roboto',sans-serif;font-size:2.5em;padding:.5em;z-index:1}.logo .ion-android-search{background-color:#36383d;border:0;float:right;font-size:.5em;padding:.5em}.search{background-color:#36383d;border:0;float:right;font-size:.5em;padding:.5em}.search:focus{border:0;outline:none}.smallMenu{display:none;float:right;margin:0 1em}.smallMenu:hover{cursor:pointer}.container-living{background-color:#383838;color:#ffffff;font-family:'Roboto',sans-serif;height:90vh}.control{background-color:#222428;border-left:2px solid transparent;font-size:17px;height:90vh;padding-top:2em !important}.control span{-moz-transition:all 200ms;-ms-transition:all 200ms;-o-transition:all 200ms;-webkit-transition:all 200ms;display:block;padding:.5em 1em;transition:all 200ms}.control span:hover{border-left:2px solid #c0392b;color:#c0392b;cursor:pointer;padding-left:2em}.control span:hover label{cursor:pointer}.controlActive{border-left:2px solid #c0392b;color:#c0392b;cursor:pointer;padding-left:2em}.control-mobile{display:none}.control-mobile span{-moz-box-shadow:0 2px 4px 0 #000000;-moz-transition:all 200ms;-ms-box-shadow:0 2px 4px 0 #000000;-ms-transition:all 200ms;-o-box-shadow:0 2px 4px 0 #000000;-o-transition:all 200ms;-webkit-box-shadow:0 2px 4px 0 #000000;-webkit-transition:all 200ms;background-color:#222428;border-left:4px solid transparent;box-shadow:0 2px 4px 0 #000000;display:block;padding:1em;transition:all 200ms}.control-mobile span:hover{border-left:4px solid #c0392b;color:#c0392b;cursor:pointer;padding-left:2em}.main{background-color:#c0392b;height:90vh;overflow-y:auto;padding-bottom:10em}.main h1{font-size:5em;text-align:center}.text-shadow{text-shadow:1px 1px rgba(108,32,24,0.5),2px 2px rgba(117,35,26,0.52),3px 3px rgba(125,37,28,0.54),4px 4px rgba(132,39,29,0.56),5px 5px rgba(139,41,31,0.58),6px 6px rgba(144,43,32,0.6),7px 7px rgba(149,44,33,0.62),8px 8px rgba(153,45,34,0.64),9px 9px rgba(157,47,35,0.66),10px 10px rgba(161,48,35,0.68),11px 11px rgba(164,49,36,0.7),12px 12px rgba(167,50,37,0.72),13px 13px rgba(170,50,37,0.74),14px 14px rgba(172,51,38,0.76),15px 15px rgba(175,52,38,0.78),16px 16px rgba(177,52,39,0.8),17px 17px rgba(179,53,39,0.82),18px 18px rgba(181,54,40,0.84),19px 19px rgba(182,54,40,0.86),20px 20px rgba(184,55,40,0.88),21px 21px rgba(186,55,41,0.9),22px 22px rgba(187,56,41,0.92),23px 23px rgba(188,56,41,0.94),24px 24px rgba(190,56,41,0.96),25px 25px rgba(191,57,42,0.98)}.struc{margin-top:5em;text-align:center}.struc span{font-size:100px}.struc label{text-align:right}.discover{background-color:#c0392b;display:none;height:90vh}.discover h1{font-size:100px;text-align:center}.myMusic{display:none}.wrapPlayer{background-color:#36383d;bottom:0;color:#b5b5b5;height:60px;position:fixed;width:100%}.wrapPlayer span{display:inline-block;padding-left:20px}.wrapPlayer h2{display:inline-block;font-size:18px;padding-left:10px}.wrapPlayer audio{float:right;margin:1em}#songs{padding:1em}#songs li{-moz-transition:all 200ms;-ms-transition:all 200ms;-o-transition:all 200ms;-webkit-transition:all 200ms;background-color:#c0392b;box-shadow:0 2px 2px 0 rgba(0,0,0,0.05),0 1px 4px 0 rgba(0,0,0,0.08),0 3px 1px -2px rgba(0,0,0,0.2);list-style:none;padding:2em;transition:all 200ms}#songs li:hover{background-color:#ff5b4a !important;cursor:pointer}#songs li span{padding-right:10px}#songs li span:hover{cursor:pointer}#songs li label:hover{cursor:pointer}.musicPlayed{background-color:#ff5b4a !important;cursor:pointer}#container-bar{background-color:#FF7361;height:5px;padding:0;position:absolute;width:100%}#bar{-moz-transition:all 300ms;-ms-transition:all 300ms;-o-transition:all 300ms;-webkit-transition:all 300ms;background-color:#ffffff;background:linear-gradient(to bottom, red, orange, yellow, green, blue, indigo, violet);height:5px;padding:0;position:absolute;transition:all 300ms;width:0}#cursor{-moz-transition:all 300ms;-ms-transition:all 300ms;-o-transition:all 300ms;-webkit-transition:all 300ms;background-color:#ffffff;bottom:-10px;height:13px;left:0;position:absolute;transition:all 300ms;width:2px}#equalizer-modal .modal-dialog{height:80%;width:80%}#equalizer{height:100%;width:100%}
