--- a/css/style.css
+++ b/css/style.css
@@ -170,16 +170,36 @@ body {
     height: 90vh;
     overflow-y: auto;
     margin-bottom: 5em;
+    padding-top: 2em;
 }
 
-.discover h1 {
+.discover h2 {
+    color: #8c0e00;
     text-align: center;
-    font-size: 100px;
+    font-size: 50px;
+}
+
+#messageImport {
+
+}
+#messageSuccesImport {
+  display: none;
 }
 /* End discover */
 /* View */
 .myMusic {
     display: none;
+}
+
+#NoMusic {
+  margin-top: 5em;
+}
+
+#NoMusic h1,
+#NoMusic h2 {
+  font-size: 2em;
+  text-align: center;
+  color: #555;
 }
 
 .discover {
@@ -267,7 +287,9 @@ body {
 
 #songs,
 #list {
-    padding: 1em;
+  padding: 1em;
+  height: 80vh;
+  overflow-y: auto;
 }
 
 #songs li,
@@ -304,7 +326,7 @@ body {
     position: absolute;
     width: 100%;
     height: 5px;
-    background-color: #FF7361;
+    background-color: #737373;
     padding: 0px;
 }
 
