--- a/css/style.less
+++ b/css/style.less
@@ -8,7 +8,7 @@ out: style.css, sourcemap: true , compress: true
 @color4: #36383d; // Appears 3 times
 @color5: #555555; // Appears 2 times
 @color6: #c0392a; // Appears 2 times
-@color7: #ff5b4a; // Appears 2 times
+@subColorTheme: #ff5b4a; // Appears 2 times
 
 // Width variables (appears count calculates by raw css)
 @width0: 300px; // Appears 2 times
@@ -272,7 +272,7 @@ body {
 // 		padding: 2em;
 // 		transition: all 200ms;
 // 		&:hover {
-// 			background-color: @color7 !important;
+// 			background-color: @subColorTheme !important;
 // 			cursor: pointer;
 // 		}
 // 		span {
@@ -290,7 +290,10 @@ body {
 // }
 
 table {
-		width: 100%;
+	width: 95%;
+  margin-left: auto;
+  margin-top: 5em;
+  margin-right: auto;
 		// background-color: @colorTheme !important;
 		thead {
 			line-height: 3em;
@@ -303,13 +306,15 @@ table {
 }
 
 #songs {
-	// background-color: red;
 	padding: 1em;
-
+	overflow-y: auto;
 	tr {
 		line-height: 4em;
 		border-top: 1px solid #484848;
-
+		&:hover {
+			cursor: pointer;
+			background-color: @subColorTheme;
+		}
 		td {
 				padding: 0 3em;
 		}
@@ -337,7 +342,7 @@ table {
 	}
 }
 .musicPlayed {
-	background-color: @color7 !important;
+	background-color: @subColorTheme !important;
 	cursor: pointer;
 }
 #container-bar {
@@ -348,10 +353,6 @@ table {
 	width: @width1;
 }
 #bar {
-	-moz-transition: all 300ms;
-	-ms-transition: all 300ms;
-	-o-transition: all 300ms;
-	-webkit-transition: all 300ms;
 	background-color: @color3;
 	background: linear-gradient(to bottom, red, orange, yellow, green, blue, indigo, violet);
 	height: @height7;
@@ -359,6 +360,11 @@ table {
 	position: absolute;
 	transition: all 300ms;
 	width: 0px;
+
+	-moz-transition: all 300ms;
+	-ms-transition: all 300ms;
+	-o-transition: all 300ms;
+	-webkit-transition: all 300ms;
 }
 #cursor {
 	-moz-transition: all 300ms;
@@ -367,7 +373,7 @@ table {
 	-webkit-transition: all 300ms;
 	background-color: @color3;
 	bottom: -10px;
-	height: 13px;
+	height: 14px;
 	left: 0%;
 	position: absolute;
 	transition: all 300ms;
