--- a/css/style.less
+++ b/css/style.less
@@ -258,6 +258,12 @@ body {
 	margin-right: 10px;
 }
 
+.modal-custom {
+	position: absolute;
+	bottom: 47px;
+	left: 7px;
+}
+
 table {
 	width: 95%;
   margin-left: auto;
@@ -327,24 +333,24 @@ table {
 	height: @height7;
 	padding: 0px;
 	position: absolute;
-	transition: all 300ms;
+	transition: all 200ms;
 	width: 0px;
 
-	-moz-transition: all 300ms;
-	-ms-transition: all 300ms;
-	-o-transition: all 300ms;
-	-webkit-transition: all 300ms;
+	-moz-transition: all 200ms;
+	-ms-transition: all 200ms;
+	-o-transition: all 200ms;
+	-webkit-transition: all 200ms;
 }
 #cursor {
-	-moz-transition: all 300ms;
-	-ms-transition: all 300ms;
-	-o-transition: all 300ms;
-	-webkit-transition: all 300ms;
+	-moz-transition: all 200ms;
+	-ms-transition: all 200ms;
+	-o-transition: all 200ms;
+	-webkit-transition: all 200ms;
 	background-color: @color3;
 	bottom: -10px;
 	height: 14px;
 	left: 0%;
 	position: absolute;
-	transition: all 300ms;
+	transition: all 200ms;
 	width: 2px;
 }
