--- a/css/style.less
+++ b/css/style.less
@@ -266,6 +266,7 @@ body {
 
 table {
 	width: 95%;
+	height: 300px;
   margin-left: auto;
   margin-top: 5em;
   margin-right: auto;
@@ -280,8 +281,14 @@ table {
 		}
 }
 
+.home {
+		height: 800px;
+		overflow-y: auto;
+}
+
 #songs {
 	padding: 1em;
+	height: 500px;
 	overflow-y: auto;
 	tr {
 		line-height: 4em;
