--- a/css/style.less
+++ b/css/style.less
@@ -257,6 +257,8 @@ body {
 .iconImport {
 	margin-right: 10px;
 }
+
+
 // #songs {
 // 	height: @height0;
 // 	overflow-y: auto;
@@ -372,4 +374,16 @@ table {
 	position: absolute;
 	transition: all 300ms;
 	width: 2px;
+}
+
+button {
+	background-color: @colorTheme;
+}
+
+.flex_container ul{
+  display: none;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: stretch;
+  align-content: space-around;
 }
