--- a/css/style.less
+++ b/css/style.less
@@ -87,6 +87,9 @@ body {
 	font-size: 17px;
 	height: @height4;
 	padding-top: 2em !important;
+	&.panel-select {
+		position: relative;
+	}
 	span {
 		-moz-transition: all 200ms;
 		-ms-transition: all 200ms;
@@ -364,4 +367,6 @@ table {
 
 #equalizer {
 	width: 100%;
+	position: absolute;
+	bottom: 80px;
 }
