--- a/css/style.less
+++ b/css/style.less
@@ -364,6 +364,9 @@ table {
 
 button {
 	background-color: @colorTheme;
+	width: 50px;
+	height: 40px;
+	border-radius: 10px;
 }
 
 .flex_container ul{
@@ -372,4 +375,19 @@ button {
   justify-content: space-around;
   align-items: stretch;
   align-content: space-around;
+}
+
+#songs_grid li {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-content: space-around;
+	width: 50px;
+	height: 50px;
+	list-style: none;
+	padding: 2em;
+	background-color: @colorTheme;
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .05), 0 1px 4px 0 rgba(0, 0, 0, .08),
+		0 3px 1px -2px rgba(0, 0, 0, .2);
+	border-radius: 10px;
 }
